--- a/public/index.css
+++ b/public/index.css
@@ -32,6 +32,12 @@ body {
 	line-height: 1;
 	height: 100vh;
 	overflow: hidden;
+	padding: 1rem;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	font-size: 1.125rem;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	color: hsl(210, 29%, 10%);
 }
 ol, ul {
 	list-style: none;
