--- a/public/index.css
+++ b/public/index.css
@@ -29,12 +29,11 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
-	height: 100vh;
+	background-color: hsl(0, 0%, 97%);
 	overflow: hidden;
-	padding: 1rem;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-size: 1.125rem;
+	line-height: 1.4em;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	color: hsl(210, 29%, 10%);
